--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </p>
     </body>
     <audio controls autoplay loop hidden>
-        <source src="My Little Pony - Friendship is Magic Theme Song! - My Little Pony - Official Channel.mp3" type="audio/mpeg">
+        <source src="My Little Pony - Friendship is Magic Theme Song! - My Little Pony - Official Channel.MP3" type="audio/mpeg">
   
     </audio>
     <script>
