--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </p>
     </body>
     <audio controls autoplay loop hidden>
-        <source src="My_Little_Pony.mp3">
-  
+        <source src="My_Little_Pony">
     </audio>
     <script>
         let counter = 0
