--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         This website is the winner of the boba contest from 2025, which stood out as a "work of art" among the other contestants. But not only was this website award with the best website of the year, Milliken has also decided to honor this by recognizing and revisiting this masterpiece for every year to come. 😘😘😘
         </p>
         <audio controls hidden autoplay loop>
-            <source src="Boba-Winning-Website/mylittlepony.mp3">
+            <source src="mylittlepony.mp3">
         </audio>
     </body>
     <script>
