--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="style.css"/>
-    <br></br>
     <head>
-        <h1>Boba Clicker</h1>
-        <p>Click on the boba and keep clicking!!</p>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
+        <br></br>
+        <h1>Boba Clicker</h1>
+        <p>Click on the boba and keep clicking!!</p>
         <img id="boba" src="https://cdn.pixabay.com/animation/2023/03/19/15/38/15-38-15-130_512.gif" 
-        onclick="clicked(this)";></img>
+        onclick="clicked(this)">
         <h2><span id="count" style="display:inline-block; transition:transform 0.2s;">
         </span></h2>
         <div style="margin-bottom: 100px;"></div>
