--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         let messages = ["gimme boba 🧋","GIMME BOBA NOW 😡","IK WHERE YOU LIVE!! 🤬","FINAL WARNING!! ⚠️","I'M SERIOUS LAST WARNING!! 🔫","YOU LEFT ME NO CHOICE!! 💣","YOU HURT MY FEELINGS I'M LEAVING YOU NO MORE MESSAGES AHHH!! 🤧🤧"]
         setInterval(() => wiggleBoba(5), 70);
         document.getElementById("count").textContent = counter;
+        const bgm = new Audio("mylittlepony.mp3").play()
         function wiggleBoba(intensity){
             rotation += wiggleDirection*intensity
             document.getElementById("boba").style.transform = `rotate(${rotation}deg)`;
@@ -34,8 +35,9 @@
         function clicked(img) {
             fartNoise()
             if (counter == 0) {
-                const bgm = new Audio("mylittlepony.mp3").play()
+                counter++;
                 bgm.loop = true;
+                bgm.play();
             }
             counter++;
             document.getElementById("count").textContent = counter;
