--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         function clicked(img) {
             fartNoise()
             if (counter == 0) {
-                const bgm = new Audio("mylittlepony.mp3").play()
+                const bgm = new Audio("mylittlepony.mp3");
                 bgm.loop = true;
                 bgm.play();
             }
